FLOW-699 Alignment of +, - actions in array field fixed.

--- a/packages/@cldcvr/flow-form-builder/src/components/f-form-array/f-form-array.scss
+++ b/packages/@cldcvr/flow-form-builder/src/components/f-form-array/f-form-array.scss
@@ -13,7 +13,7 @@
 		display: none !important;
 	}
 	@include infoIcon();
-	.f-form-array-action {
+	f-icon-button.f-form-array-action {
 		visibility: hidden;
 	}
 }
